[gd_scene load_steps=6 format=3 uid="uid://ctwb1d3jhf6yu"]

[ext_resource type="Material" uid="uid://dpfjq41bfrnw5" path="res://objects/screen/screen_material_3d.tres" id="1_gcjay"]
[ext_resource type="Script" path="res://objects/screen/screen_toggle.gd" id="2_wiemm"]
[ext_resource type="AudioStream" uid="uid://c7s0k102yyt0t" path="res://objects/screen/audio/mech-keyboard-02-102918.mp3" id="3_sp4wd"]
[ext_resource type="AudioStream" uid="uid://cljkhocj3ttuf" path="res://objects/screen/audio/cpu-working-31717.mp3" id="4_ylom0"]
[ext_resource type="Material" uid="uid://dpdp7bo72jy6q" path="res://player/flashlight/flashlight_button_material_3d.tres" id="5_tv8kr"]

[node name="Screen" type="CSGBox3D"]
transform = Transform3D(1, 0, 0, 0, 0.75, 0, 0, 0, 0.1, 0, 0, 0.539468)
sorting_offset = 1.0
transparency = 0.25
gi_mode = 2
material = ExtResource("1_gcjay")
script = ExtResource("2_wiemm")
material = ExtResource("1_gcjay")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.545098, 1, 1, 1)
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 10.0
distance_fade_length = 5.0
omni_range = 1.0
omni_attenuation = 0.1

[node name="AmbienceStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1.33333, 0, 0, 0, 1.33333, 0, 0, 0, 10, 0, 0, 5)
stream = ExtResource("4_ylom0")
volume_db = -10.0
max_db = 1.0
pitch_scale = 0.9

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
visible = false

[node name="Button_holder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999999, -0.426, -0.561, -0.6)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Button_holder"]
transform = Transform3D(1.33333, 0, 0, 0, 1.33333, -2.13701e-08, 0, 1.60276e-07, 10, 0, 0, 0)
stream = ExtResource("3_sp4wd")
volume_db = -2.0

[node name="Button" type="CSGCylinder3D" parent="Button_holder"]
transform = Transform3D(0.075, 0, 0, 0, -1.63918e-08, 0.1, 0, -0.375, -4.37114e-09, 0, 0, 0.125)
transparency = 0.5
gi_mode = 2
sides = 15
material = ExtResource("5_tv8kr")

[node name="OmniLight3D" type="OmniLight3D" parent="Button_holder/Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.598931, 0)
light_color = Color(1, 0.14902, 0.14902, 1)
light_energy = 0.1
light_specular = 0.25
distance_fade_enabled = true
omni_range = 50.0
omni_attenuation = 0.75

[node name="SpotLight3D" type="SpotLight3D" parent="Button_holder/Button"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
light_color = Color(1, 0.14902, 0.14902, 1)
light_energy = 0.1
distance_fade_enabled = true
spot_angle = 180.0

[connection signal="finished" from="AmbienceStreamPlayer3D" to="." method="_on_ambience_stream_player_3d_finished"]
